Fix strong on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -70,3 +70,7 @@ ul > li {
 ol > li {
     @apply list-decimal;
 }
+
+strong {
+    @apply font-bold;
+}
